links de projetos

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="https://github.com/jeesantilva" target="_blank">
                     <i class='bx bxl-github icon-rede-menu' ></i>
                 </a>
-                <a href="www.linkedin.com/in/jessica-santos-devwoman" target="_blank">
+                <a href="https://www.linkedin.com/in/jessica-santos-devwoman/" target="_blank">
                     <i class='bx bxl-linkedin icon-rede-menu' ></i>
                 </a>
                 <a href="https://api.whatsapp.com/send?phone=5511962046895&text=Ol%C3%A1,%20estou%20entrando%20em%20contato%20com%20voc%C3%AA%20atraves%20do%20link%20do%20seu%20portf%C3%B3lio."
@@ -288,12 +288,12 @@
                             </div>
                         </div>
                         <div class="btns-projetos">
-                            <a class="btn-proj" href="https://jeesantilva.github.io/cafeteria_publicacao/"
+                            <a class="btn-proj" href="https://sorveteria-gelateria-kohl.vercel.app/"
                                 target="_blank">
                                 <i class='bx bx-link-external icon-proj '></i>
                                 <p>Deploy</p>
                             </a>
-                            <a class="btn-proj" href="https://github.com/jeesantilva/cafeteria_publicacao"
+                            <a class="btn-proj" href="https://github.com/jeesantilva/sorveteria_gelateria"
                                 target="_blank">
                                 <i class='bx bxl-github icon-proj' ></i>
                                 <p>Code</p>
@@ -322,19 +322,19 @@
                             </div>
                         </div>
                         <div class="btns-projetos">
-                            <a class="btn-proj" href="https://jeesantilva.github.io/cafeteria_publicacao/"
+                            <a class="btn-proj" href="https://jeesantilva.github.io/projeto-CMLife/"
                                 target="_blank">
                                 <i class='bx bx-link-external icon-proj '></i>
                                 <p>Deploy</p>
                             </a>
-                            <a class="btn-proj" href="https://github.com/jeesantilva/cafeteria_publicacao"
+                            <a class="btn-proj" href="https://github.com/jeesantilva/projeto-CMLife"
                                 target="_blank">
                                 <i class='bx bxl-github icon-proj' ></i>
                                 <p>Code</p>
                             </a>
                         </div>
                     </div>
-                    <!-- ----card ------------------- -->
+                    <!-- ----card - projeto Cafeteria Manhattan ------------------- -->
                     <div class="card">
                         <div class="img">
                             <img src="/img/projeto-cafeteria-manhattan.png" alt="">
@@ -356,19 +356,19 @@
                             </div>
                         </div>
                         <div class="btns-projetos">
-                            <a class="btn-proj" href="https://jeesantilva.github.io/cafeteria_publicacao/"
+                            <a class="btn-proj" href="https://jeesantilva.github.io/project__cafeteria/"
                                 target="_blank">
                                 <i class='bx bx-link-external icon-proj '></i>
                                 <p>Deploy</p>
                             </a>
-                            <a class="btn-proj" href="https://github.com/jeesantilva/cafeteria_publicacao"
+                            <a class="btn-proj" href="https://github.com/jeesantilva/project__cafeteria"
                                 target="_blank">
                                 <i class='bx bxl-github icon-proj' ></i>
                                 <p>Code</p>
                             </a>
                         </div>
                     </div>
-                    <!-- ----card ------------------- -->
+                    <!-- ----card - projeto Paraty ------------------- -->
                     <div class="card">
                         <div class="img">
                             <img src="/img/projeto-paraty.png" alt="">
@@ -390,19 +390,19 @@
                             </div>
                         </div>
                         <div class="btns-projetos">
-                            <a class="btn-proj" href="https://jeesantilva.github.io/cafeteria_publicacao/"
+                            <a class="btn-proj" href="https://jeesantilva.github.io/visite-paraty/"
                                 target="_blank">
                                 <i class='bx bx-link-external icon-proj '></i>
                                 <p>Deploy</p>
                             </a>
-                            <a class="btn-proj" href="https://github.com/jeesantilva/cafeteria_publicacao"
+                            <a class="btn-proj" href="https://github.com/jeesantilva/visite-paraty"
                                 target="_blank">
                                 <i class='bx bxl-github icon-proj' ></i>
                                 <p>Code</p>
                             </a>
                         </div>
                     </div>
-                    <!-- ----card ------------------- -->
+                    <!-- ----card - projeto imobiliaria ------------------- -->
                     <div class="card" id="card">
                         <div class="img">
                             <img src="/img/projeto-imobiliaria.png" alt="">
@@ -424,12 +424,12 @@
                             </div>
                         </div>
                           <div class="btns-projetos">
-                            <a class="btn-proj" href="https://jeesantilva.github.io/cafeteria_publicacao/"
+                            <a class="btn-proj" href="https://jeesantilva.github.io/Imob-Project/"
                                 target="_blank">
                                 <i class='bx bx-link-external icon-proj '></i>
                                 <p>Deploy</p>
                             </a>
-                            <a class="btn-proj" href="https://github.com/jeesantilva/cafeteria_publicacao"
+                            <a class="btn-proj" href="https://github.com/jeesantilva/Imob-Project"
                                 target="_blank">
                                 <i class='bx bxl-github icon-proj' ></i>
                                 <p>Code</p>
