--- a/index.html
+++ b/index.html
@@ -259,12 +259,12 @@
                                 </p>
                             </div>
                             <div class="btns-projetos">
-                                <a class="btn-proj" href="https://jeesantilva.github.io/cafeteria_publicacao/"
+                                <a class="btn-proj" href="https://sorveteria-gelateria-kohl.vercel.app/"
                                     target="_blank">
                                     <i class='bx bx-link-external icon-proj '></i>
                                     <p>Deploy</p>
                                 </a>
-                                <a class="btn-proj" href="https://github.com/jeesantilva/cafeteria_publicacao"
+                                <a class="btn-proj" href="https://github.com/jeesantilva/sorveteria_gelateria"
                                     target="_blank">
                                     <i class='bx bxl-github icon-proj'></i>
                                     <p>Code</p>
@@ -285,12 +285,12 @@
                                 </p>
                             </div>
                             <div class="btns-projetos">
-                                <a class="btn-proj" href="https://jeesantilva.github.io/cafeteria_publicacao/"
+                                <a class="btn-proj" href="https://jeesantilva.github.io/projeto-CMLife/"
                                     target="_blank">
                                     <i class='bx bx-link-external icon-proj '></i>
                                     <p>Deploy</p>
                                 </a>
-                                <a class="btn-proj" href="https://github.com/jeesantilva/cafeteria_publicacao"
+                                <a class="btn-proj" href="https://github.com/jeesantilva/projeto-CMLife"
                                     target="_blank">
                                     <i class='bx bxl-github icon-proj'></i>
                                     <p>Code</p>
@@ -312,12 +312,12 @@
                                 </p>
                             </div>
                             <div class="btns-projetos">
-                                <a class="btn-proj" href="https://jeesantilva.github.io/cafeteria_publicacao/"
+                                <a class="btn-proj" href="https://jeesantilva.github.io/project__cafeteria/"
                                     target="_blank">
                                     <i class='bx bx-link-external icon-proj '></i>
                                     <p>Deploy</p>
                                 </a>
-                                <a class="btn-proj" href="https://github.com/jeesantilva/cafeteria_publicacao"
+                                <a class="btn-proj" href="https://github.com/jeesantilva/project__cafeteria"
                                     target="_blank">
                                     <i class='bx bxl-github icon-proj'></i>
                                     <p>Code</p>
@@ -338,12 +338,12 @@
                                 </p>
                             </div>
                             <div class="btns-projetos">
-                                <a class="btn-proj" href="https://jeesantilva.github.io/cafeteria_publicacao/"
+                                <a class="btn-proj" href="https://jeesantilva.github.io/visite-paraty/"
                                     target="_blank">
                                     <i class='bx bx-link-external icon-proj '></i>
                                     <p>Deploy</p>
                                 </a>
-                                <a class="btn-proj" href="https://github.com/jeesantilva/cafeteria_publicacao"
+                                <a class="btn-proj" href="https://github.com/jeesantilva/visite-paraty"
                                     target="_blank">
                                     <i class='bx bxl-github icon-proj'></i>
                                     <p>Code</p>
@@ -364,12 +364,12 @@
                                 </p>
                             </div>
                             <div class="btns-projetos">
-                                <a class="btn-proj" href="https://jeesantilva.github.io/cafeteria_publicacao/"
+                                <a class="btn-proj" href="https://jeesantilva.github.io/Imob-Project/"
                                     target="_blank">
                                     <i class='bx bx-link-external icon-proj '></i>
                                     <p>Deploy</p>
                                 </a>
-                                <a class="btn-proj" href="https://github.com/jeesantilva/cafeteria_publicacao"
+                                <a class="btn-proj" href="https://github.com/jeesantilva/Imob-Project"
                                     target="_blank">
                                     <i class='bx bxl-github icon-proj'></i>
                                     <p>Code</p>
